Fix hero background size on mobile, adjust positioning

--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -10,13 +10,15 @@
 
 .heroBackground {
     position: absolute;
+    /* Make the image larger than normal and then mask it so it has clean edges */
     top: -5%;
     left: -5%;
     width: 110%;
     height: 110%;
 
     background-image: url(../images/hero.jpg);
-    background-size: 100%;
+    background-size: cover;
+    background-position: center 32%;
     background-repeat: no-repeat;
     -webkit-filter: blur(5px);
             filter: blur(5px)
